# monitoring-system

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  check-system.sh  start-all.sh
agent/: CMakeLists.txt  check-system.sh
agent/src/: http_client.cpp  http_client.h  main.cpp  system_info.cpp  system_info.h
docker/: docker-compose.yml
docker/grafana/provisioning/datasources/: influxdb.yml
receiver/: requirements.txt  run.sh
receiver/src/: server.py
